--- a/CSS6/INdex.HTml
+++ b/CSS6/INdex.HTml
@@ -27,11 +27,13 @@
         .encabezado-img{
             border: 1px solid rgb(94, 250, 3);
             border-radius: 5px;
+            box-shadow: 0px 0px 10px 0px;
         }
         .encabezado-titulo{
             font-family: arial;
             
         }
+        
     </style>
 </body>
 </html>
