--- a/CSS12/plantilla (1).html
+++ b/CSS12/plantilla (1).html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="https://unpkg.com/primeflex/themes/primeone-light.css">
     <title>Document</title>
 </head>
-<body>       
+<body>
+    <div class="grid">
+        <div class="col-3">
+            melalindaseleenvidiosa
+        </div>
+        <div class="col-7">
+            meladiosaseleenvidiosa
+        </div>
+        <div class="col-2">
+            melareinaseleenvidiosa
+        </div>
+    </div>       
 </body>
 </html>
