--- a/CSS12/plantilla (1).html
+++ b/CSS12/plantilla (1).html
@@ -9,15 +9,29 @@
 </head>
 <body>
     <div class="grid">
-        <div class="col-3">
+        <div class="col-3 bg-red-200">
             melalindaseleenvidiosa
         </div>
-        <div class="col-7">
+        <div class="col-7 bg-red-400">
             meladiosaseleenvidiosa
         </div>
-        <div class="col-2">
+        <div class="col-2 bg-red-600">
             melareinaseleenvidiosa
         </div>
-    </div>       
+    </div> 
+
+    <div class="grid2">
+        <div class="col-12 bg-green-400">
+            
+    </div>
+
+    <div class="grid3">
+            <div class="col-6 bg-purple-400"> 
+    </div>
+             <div class="col-6 bg-blue-400">
+    </div>
+    
+
+        </div>      
 </body>
 </html>
