--- a/TRABAJO FINAL/INDEX.HTML
+++ b/TRABAJO FINAL/INDEX.HTML
@@ -17,7 +17,7 @@
     <span class="encabezado-derecha">
         <span class="encabezado-campanita"> 🕭 </span>
         <button class="encabezado-sesion"> INICIAR SESION </button>
-        <button class="encabezado-suscribete"> CURSO POR $5000 </button>
+        <button class="encabezado-suscribete">ENVIOS A PARTIR DE $5000 </button>
     </span>
     <div>
    <div class="publish">
@@ -122,7 +122,7 @@
             color: black;
             border-radius: 3px;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            border: 1px solid  rgb(255, 255, 0);
+            border: 1px solid  rgb(0, 0, 0);
         }
         .publish{
             border: 1px solid black;
