--- a/TRABAJO FINAL/rubro1.html
+++ b/TRABAJO FINAL/rubro1.html
@@ -13,7 +13,7 @@
         <a href="INDEX.HTML">
         <button class="volver">VOLVER</button>
         <a href="base.html">
-            <img src="https://ss706.liverpool.com.mx/xl/1103291972.jpg" alt="" width="222">
+            <img src="https://cdn.batitienda.com/baticloud/images/product_picture_6b876eb486f6458e945c92cb10dacbb0_638053179322548524_0_m.png" alt="" width="222">
         </a>
         <a href="dior.html">
             <img src="https://http2.mlstatic.com/D_643641-MLU74717350223_022024-C.jpg" alt="" width="222">
